--- a/index.HTML
+++ b/index.HTML
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GitHub repo</title>
 </head>
 <body>
-    
+    <h1>
+        Hosted with Netlify
+    </h1>
 </body>
 </html>
